Fix javac tests on JDK 17